# chan.rs

./: .gitignore  Cargo.toml  blist.rs  compare.py  found_no_dup.py  pyproject.toml  run.sh
2src/: ChanConfig.rs  lib.rs
2src/Bi/: Bi.rs  mod.rs
2src/BuySellPoint/: BS_Point.rs
2src/Combiner/: KLine_Combiner.rs  mod.rs
2src/Common/: CEnum.rs  ChanException.rs  handle.rs  slice_macro.rs
2src/DataAPI/: CommonStockAPI.rs  mod.rs
2src/KLine/: KLine.rs  KLine_List.rs  KLine_Unit.rs  TradeInfo.rs  metric.rs  mod.rs
2src/Math/: BOLL.rs  KDJ.rs  TrendLine.rs  TrendModel.rs  metric.rs  mod.rs
2src/Seg/: Eigen.rs  Seg.rs  linetype.rs  mod.rs
2src/ZS/: ZS.rs  ZSConfig.rs  ZSList.rs
chan/: Cargo.toml
chan/src/: ChanConfig.rs
chan/src/Bi/: BiConfig.rs  BiList.rs
chan/src/BuySellPoint/: BS_Point.rs  mod.rs
chan/src/ChanModel/: mod.rs
chan/src/Common/: CEnum.rs  CTime.rs  TradeInfo.rs  handle.rs  macros.rs
chan/src/KLine/: KLine_List.rs  KLine_Unit.rs
chan/src/Math/: BOLL.rs  MACD.rs  RSI.rs  mod.rs
chan/src/Seg/: Eigen.rs  EigenFX.rs  SegListChan.rs  SegListComm.rs  linetype.rs  lineum.rs  mod.rs  types.rs
chan/src/ZS/: ZSConfig.rs  mod.rs
chan/src/data_source/: main.rs
cli/: Cargo.toml
cli/src/: action.rs  bi.rs  bsp.rs  check.rs  compare.rs  csv_util.rs  download.rs  fx.rs  main.rs  parse.rs  period.rs  plot.rs  seg.rs  util.rs  web.rs  zs.rs
czsc/: Cargo.toml
czsc/python/tests/: test_analyzer.py
czsc/src/: analyzer.rs  bar.rs  bar_list.rs  bsp.rs  bsp_config.rs  bsp_list.rs  candle.rs  candle_list.rs  cbi.rs  cbi_algo.rs  cbi_config.rs  cbi_list.rs  ceigen.rs  ceigen_fx.rs  cenum.rs  chan_exception.rs  config.rs  cseg.rs  cseg_config.rs  cseg_list.rs  cseg_list_comm.rs  czs.rs  czs_bak.rs  czs_config.rs  czs_list.rs  czs_list_bak.rs  features.rs  func_util.rs  handle.rs  iboll.rs  imacd.rs  irsi.rs  lib.rs  line_type.rs  metric.rs  slice_macro.rs  storage.rs
czsc/src/python/: analyzer.rs  mod.rs  types.rs  utils.rs
multi/: Chan.rs  ChanConfig.rs  lib.rs
multi/Bi/: Bi.rs  BiList.rs
multi/BuySellPoint/: BSPointList.rs  BS_Point.rs
multi/Combiner/: Combine_Item.rs  KLine_Combiner.rs
multi/Common/: CEnum.rs  CTime.rs  ChanException.rs  func_util.rs  mod.rs  types.rs
multi/DataAPI/: CommonStockAPI.rs  csvAPI.rs
multi/KLine/: KLine.rs  KLine_List.rs  KLine_Unit.rs
multi/Math/: BOLL.rs  Demark.rs  KDJ.rs  MACD.rs  TrendLine.rs
multi/Seg/: Eigen.rs  EigenFX.rs  Seg.rs  SegListChan.rs  SegListComm.rs  mod.rs
multi/ZS/: ZS.rs  ZSConfig.rs  ZSList.rs
src/: Chan.rs  ChanConfig.rs  analysis.rs  analyzer.rs  bar.rs  bar_list.rs  bsp.rs  bsp_list.rs  candle.rs  candle_list.rs  cbi.rs  cbi_list.rs  ceigen.rs  ceigen_fx.rs  common.rs  config.rs  cseg.rs  cseg_list.rs  czs.rs  czs_config.rs  handle.rs  kline.rs  lib.rs  metric.rs
src/Bi/: Bi.rs  BiConfig.rs  BiList.rs
src/BuySellPoint/: BSPointConfig.rs  BSPointList.rs  BS_Point.rs
src/ChanModel/: Features.rs
src/Combiner/: Combine_Item.rs  KLine_Combiner.rs
src/Common/: CEnum.rs  CTime.rs  ChanException.rs  TradeInfo.rs  func_util.rs  macros.rs  mod.rs  types.rs
src/DataAPI/: CommonStockAPI.rs  csvAPI.rs
src/KLine/: KLine.rs  KLine_List.rs  KLine_Unit.rs  TradeInfo.rs  mod.rs
src/Math/: Demark.rs  KDJ.rs  RSI.rs  TrendLine.rs  TrendModel.rs  metric.rs  mod.rs
src/Seg/: Eigen.rs  EigenFX.rs  Seg.rs  SegConfig.rs  SegListChan.rs  SegListComm.rs  kline_combiner.rs  linetype.rs  mod.rs
src/Seg2/: EigenFX.rs  Seg.rs  SegListChan.rs  SegListComm.rs  linetype.rs
src/ZS/: ZS.rs  ZSConfig.rs  ZSList.rs
