[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chan = { path = "../chan" }
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
dotenv = "0.15.0"
axum = "0.7.7"
tower = "0.5.1"
indicatif="0.17.8"
arrow = "53.2.0"
parquet = "53.2.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"