[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
czsc = { path = "../czsc" }
csv = "1.3.0"
tokio = { version = "1", features = ["full", "macros", "tracing"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
dotenv = "0.15.0"
axum = "0.7.4"
tower = "0.4"
indicatif = "0.17.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
