[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
czsc = { path = "../czsc" }
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5.20"
indicatif = "0.17.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
