[package]
name = "czsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "czsc"
crate-type = ["rlib", "cdylib"]

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv="1.3.1"
segvec="0.2.0"
smallvec="1.13.2"
rand="*"
arrow = "53.2.0"
parquet = { version = "47.0.0", features = ["arrow"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
rustc-arena-modified = "0.1.1"
hashmap_macro="*"
micromap = "0.0.15"
indexmap="2.6.0"
rustc-hash = "2.0"
serde_with= "3.11.0"
pyo3 = { version = "0.19", features = ["extension-module"] }

[features]
default = ["python"]
python = ["pyo3/extension-module"]